<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:id="@+id/filter_gender_layout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="24.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:textAppearance="?textAppearanceBody1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filters_showme" />

    <RadioGroup
        android:orientation="horizontal"
        android:id="@+id/gender_radio_group"
        android:background="@drawable/rectangle_roundedx2_with_border_filter"
        android:layout_width="fill_parent"
        android:layout_height="40.0dip"
        android:layout_marginTop="12.0dip">

        <RadioButton
            android:id="@+id/radio_male"
            android:text="@string/pnb_filters_guy"
            style="@style/pnb_age_button" />

        <RadioButton
            android:id="@+id/radio_female"
            android:text="@string/pnb_filters_girl"
            style="@style/pnb_age_button" />

        <RadioButton
            android:id="@+id/radio_both"
            android:text="@string/pnb_filters_both"
            style="@style/pnb_age_button" />
    </RadioGroup>
</LinearLayout>