<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_cheese"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/rounded_dialog_bottom"
    android:clipToPadding="false"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@drawable/rounded_dialog_bottom"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="45.0dip"
        android:paddingTop="20.0dip"
        android:paddingRight="45.0dip"
        android:paddingBottom="20.0dip">

        <ImageView
            android:id="@+id/image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginBottom="30.0dip"
            app:srcCompat="@drawable/ic_livestream_tokens" />

        <LinearLayout
            android:id="@+id/tokens_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/stats_followers_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/live_tokens"
                android:textColor="@color/grey_60"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tokens"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="0"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12.0dip"
            android:gravity="center_horizontal"
            android:text="@string/wallet_choose_method"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/exchange_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/exchange"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/exchange"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/grey_90" />

                <View
                    android:layout_width="@dimen/spacing_mlarge"
                    android:layout_height="0dp" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/withdraw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wallet_withdraw_pay"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/grey_90" />

            </RadioGroup>

        </LinearLayout>

        <TextView
            android:id="@id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@color/grey_60"
            tools:text="@string/exchange_to_credits"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:background="@color/grey_2" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/paypal_email_amount"
            style="@style/ErrorInHintTextInput"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/amount"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/wallet_amount"
                android:inputType="number"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/paypal_email_input"
            style="@style/ErrorInHintTextInput"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/paypal_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/paypal_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/primary_action"
            style="?buttonStylePrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24.0dip"
            android:text="@string/exchange" />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>