<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/living_group"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RadioButton
        android:id="@+id/no_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:background="?android:selectableItemBackground"
        android:button="@null"
        android:drawableEnd="?android:attr/listChoiceIndicatorSingle"
        android:drawableRight="?android:attr/listChoiceIndicatorSingle"
        android:fontFamily="sans-serif"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:text="@string/profile_no_answer"
        android:textAlignment="textStart"
        android:textColor="@color/edit_hint"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="bottom"
        android:background="@color/divider_color" />

    <RadioButton
        android:id="@+id/living_myself"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:background="?android:selectableItemBackground"
        android:button="@null"
        android:drawableEnd="?android:attr/listChoiceIndicatorSingle"
        android:drawableRight="?android:attr/listChoiceIndicatorSingle"
        android:fontFamily="sans-serif"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:text="@string/living_myself"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="bottom"
        android:background="@color/divider_color" />

    <RadioButton
        android:id="@+id/living_student"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:background="?android:selectableItemBackground"
        android:button="@null"
        android:drawableEnd="?android:attr/listChoiceIndicatorSingle"
        android:drawableRight="?android:attr/listChoiceIndicatorSingle"
        android:fontFamily="sans-serif"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:text="@string/living_student"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="bottom"
        android:background="@color/divider_color" />

    <RadioButton
        android:id="@+id/living_parents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:background="?android:selectableItemBackground"
        android:button="@null"
        android:drawableEnd="?android:attr/listChoiceIndicatorSingle"
        android:drawableRight="?android:attr/listChoiceIndicatorSingle"
        android:fontFamily="sans-serif"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:text="@string/living_parents"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="bottom"
        android:background="@color/divider_color" />

    <RadioButton
        android:id="@+id/living_partner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:background="?android:selectableItemBackground"
        android:button="@null"
        android:drawableEnd="?android:attr/listChoiceIndicatorSingle"
        android:drawableRight="?android:attr/listChoiceIndicatorSingle"
        android:fontFamily="sans-serif"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:text="@string/living_partner"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="bottom"
        android:background="@color/divider_color" />

    <RadioButton
        android:id="@+id/living_room"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:background="?android:selectableItemBackground"
        android:button="@null"
        android:drawableEnd="?android:attr/listChoiceIndicatorSingle"
        android:drawableRight="?android:attr/listChoiceIndicatorSingle"
        android:fontFamily="sans-serif"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:text="@string/living_room"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="bottom"
        android:background="@color/divider_color" />

</RadioGroup>